--- a/index.html
+++ b/index.html
@@ -28,8 +28,20 @@
 
     <div class="controls">
         <p id="elapsedTime" class="elapsedTime">Work has not started yet.</p>
+        <button class="addHoursBtn" onclick="toggleAddHoursMenu()">+</button>
+        <div class="addHoursMenu" id="addHoursMenu">
+            <p>Add Hours Manually:</p>
+            <input type="date" id="date" placeholder="date" name="date">
+            <label for="startTime">From:</label>
+            <input type="time" id="startTime" placeholder="Start Time">
+            <label for="endTime">Until:</label>
+            <input type="time" id="endTime" placeholder="End Time">
+            <button class="saveHoursBtn" onclick="addHours()">Save</button>
+        </div>
+
         <button class="startStopBtn" id="startBtn" onclick="startRecordHours()">Start Working</button>
         <button class="startStopBtn" id="stopBtn" onclick="stopRecordHours()" hidden>Stop Working</button>
+        
         <button class="settingsBtn" onclick="toggleSettingsMenu()">ⓘ</button>
         <div class="settingsMenu" id="settingsMenu">
             <p>Info:</p>
@@ -38,6 +50,7 @@
             <input type="number" id="hourlyRate" placeholder="Hourly Rate" name="hourlyRate">
             <button class="saveSettingsBtn" onclick="saveInfo()">Save</button>
             <button onclick="resetData()">reset Data</button>
+            <a onclick="exportData()">Export Work Hours</a>
         </div>
     </div>
     <script src="app.js"></script>
