--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="apple-touch-startup-image" content="logo.png">
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="theme-color" content="#FAFAFA">
+    <meta name="theme-color" content="#f2f2f7">
     <meta name="description" content="A simple work hours tracker.">
     <title>Hours Tracker</title>
 </head>
