--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
     <main>
+        <div class="colors"></div>
         <h1 class="title" id="title"></h1>
         <h3 id="greeting" class="greeting"></h3>
         <h3 id="motivationalQuotes" class="greeting quotes"></h3>
