--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <meta name="apple-mobile-web-app-title" content="Hours Tracker">
     <link rel="apple-touch-icon" href="logo.png">
     <meta name="apple-touch-startup-image" content="logo.png">
+    
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#f2f2f7">
     <meta name="description" content="A simple work hours tracker.">
     <title>Hours Tracker</title>
