trying fixing ios issue

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 
     <meta name="apple-mobile-web-app-capable" content="yes"> 
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#f2f2f7">
     <meta name="apple-mobile-web-app-title" content="Hours Tracker">
     <link rel="apple-touch-icon" href="logo.png">
     <meta name="apple-touch-startup-image" content="logo.png">
