adding a table view for the data

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 <body>
     <main>
         <div class="colors"></div>
+        <button onclick="loadLinksMenu()" class="linksMenuBtn"><img id="linksMenuBtnImg" src="menuBtn.png" alt=""></button>
+        <div class="linksMenu" id="linksMenu">
+            <a href="/hoursTracker">Home</a>
+            <a href="/formal.html">Table View</a>
+        </div>
         <h1 class="title" id="title"></h1>
         <h3 id="greeting" class="greeting"></h3>
         <h3 id="motivationalQuotes" class="greeting quotes"></h3>
