--- a/formal.html
+++ b/formal.html
@@ -12,7 +12,7 @@
     <button onclick="loadLinksMenu()" class="linksMenuBtn"><img id="linksMenuBtnImg" src="menuBtn.png" alt=""></button>
     <div class="linksMenu" id="linksMenu">
         <a href="/hoursTracker">Home</a>
-        <a href="/formal.html">Table View</a>
+        <a href="/hoursTracker/formal.html">Table View</a>
     </div>
 
     <div class="info">
