--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button onclick="loadLinksMenu()" class="linksMenuBtn"><img id="linksMenuBtnImg" src="menuBtn.png" alt=""></button>
         <div class="linksMenu" id="linksMenu">
             <a href="/hoursTracker">Home</a>
-            <a href="/formal.html">Table View</a>
+            <a href="/hoursTracker/formal.html">Table View</a>
         </div>
         <h1 class="title" id="title"></h1>
         <h3 id="greeting" class="greeting"></h3>
