add an export data function that give a csv file.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <input type="number" id="hourlyRate" placeholder="Hourly Rate" name="hourlyRate">
             <button class="saveSettingsBtn" onclick="saveInfo()">Save</button>
             <button onclick="resetData()">reset Data</button>
-            <a onclick="exportData()">Export Work Hours</a>
+            <a onclick="exportData()" class="exportDataBtn">Export Work Hours</a>
         </div>
     </div>
     <script src="app.js"></script>
