--- a/formal.html
+++ b/formal.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="formalStyle.css">
+    <link rel="stylesheet" href="style.css">
     <title>Table View</title>
 </head>
 <body>
