organize a bit the display in the main page that it will display the current month and at the end the other entrys

--- a/index.html
+++ b/index.html
@@ -30,9 +30,15 @@
         <h3 id="greeting" class="greeting"></h3>
         <h3 id="motivationalQuotes" class="greeting quotes"></h3>
     
-        <ul id="pastWorkHoursDisplay" class="pastWorkHoursDisplay"></ul>
-    
+        <h2 class="pastWorkHoursDisplayTitle">This Month</h2>
+        <ul id="thisMonthDisplay" class="pastWorkHoursDisplay"></ul>
+
         <ul id="summery" class="pastWorkHoursDisplay"></ul>
+
+        <details class="pastWorkHoursDisplayContainer">
+            <summary class="pastWorkHoursDisplayTitle">Previous Shift</summary>
+            <ul id="pastWorkHoursDisplay" class="pastWorkHoursDisplay"></ul>
+        </details>
     </main>
 
     <div class="controls">
