--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <ul id="summery" class="pastWorkHoursDisplay"></ul>
 
         <details class="pastWorkHoursDisplayContainer">
-            <summary class="pastWorkHoursDisplayTitle">Previous Shift</summary>
+            <summary class="pastWorkHoursDisplayTitle">Previous Months</summary>
             <ul id="pastWorkHoursDisplay" class="pastWorkHoursDisplay"></ul>
         </details>
     </main>
