doing a lot of bug fixing and fixing in general. hope that make the app better

--- a/formal.html
+++ b/formal.html
@@ -24,6 +24,11 @@
 
     <div id="tableContainer"></div>
 
+    <div>
+        <button onclick="previousBtn()">Previous Month</button>
+        <button onclick="nextBtn()">Next Month</button>
+    </div>
+
     <script src="app.js"></script>
     <script src="formal.js"></script>
 </body>
