--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <button class="saveHoursBtn" onclick="addHours()">Save</button>
         </div>
 
-        <button class="startStopBtn" id="startBtn" onclick="startRecordHours()">Start Working</button>
-        <button class="startStopBtn" id="stopBtn" onclick="stopRecordHours()" hidden>Stop Working</button>
+        <button class="startStopBtn" id="startBtn" onclick="startRecordHours()">Punch In</button>
+        <button class="startStopBtn" id="stopBtn" onclick="stopRecordHours()" hidden>Punch Out</button>
         
         <button class="settingsBtn" onclick="toggleSettingsMenu()">ⓘ</button>
         <div class="settingsMenu" id="settingsMenu">
