fixing cosmetic problem

--- a/formal.html
+++ b/formal.html
@@ -29,6 +29,8 @@
         <button onclick="nextBtn()">Next Month</button>
     </div>
 
+    <div class="invisibleMargin"></div>
+
     <script src="app.js"></script>
     <script src="formal.js"></script>
 </body>
