--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#f2f2f7">
+    <meta name="theme-color" content="#ffffffdc">
     <meta name="description" content="A simple work hours tracker.">
     <title>Hours Tracker</title>
 </head>
@@ -50,14 +50,23 @@
         <p id="elapsedTime" class="elapsedTime">Work has not started yet.</p>
         <button class="addHoursBtn" onclick="toggleAddHoursMenu()">+</button>
         <div class="addHoursMenu" id="addHoursMenu">
-            <p>Add Hours Manually:</p>
-            <label for="date">Date:</label>
-            <input type="date" id="date" placeholder="date" name="date">
-            <label for="startTime">From:</label>
-            <input type="time" id="startTime" placeholder="Start Time">
-            <label for="endTime">Until:</label>
-            <input type="time" id="endTime" placeholder="End Time">
-            <button class="saveHoursBtn" onclick="addHours()">Save</button>
+            <a onclick="toggleAddHoursMenu()" class="settingsCloseBtn">Close</a>
+            <a onclick="addHours()" class="settingsSaveBtn">Save</a>
+            <h1 class="settingsTitle">New Entry</h1>
+            <ul>
+                <li>    
+                    <label for="date">Date</label>
+                    <input type="date" id="date" placeholder="date" name="date">
+                </li>
+                <li>
+                    <label for="startTime">From</label>
+                    <input type="time" id="startTime" placeholder="Start Time">
+                </li>
+                <li>
+                    <label for="endTime">Until</label>
+                    <input type="time" id="endTime" placeholder="End Time">
+                </li>
+            </ul>
         </div>
 
         <button class="startStopBtn" id="startBtn" onclick="startRecordHours()">Punch In</button>
@@ -65,13 +74,28 @@
         
         <button class="settingsBtn" onclick="toggleSettingsMenu()">ⓘ</button>
         <div class="settingsMenu" id="settingsMenu">
-            <p>Info:</p>
-            <input type="text" id="name" placeholder="name" name="name">
-            <input type="text" id="workplace" placeholder="Workplace" name="workplace">
-            <input type="number" id="hourlyRate" placeholder="Hourly Rate" name="hourlyRate">
-            <button class="saveSettingsBtn" onclick="saveInfo()">Save</button>
-            <button onclick="resetData()">reset Data</button>
-            <a onclick="exportData()" class="exportDataBtn">Export Work Hours</a>
+            <a onclick="toggleSettingsMenu()" class="settingsCloseBtn">Close</a>
+            <a onclick="saveInfo()" class="settingsSaveBtn">Save</a>
+            <h1 class="settingsTitle">Personal Info</h1>
+            <ul>
+                <li>
+                    <label for="name">Name</label>
+                    <input type="text" id="name" placeholder="name" name="name">
+                </li>
+                <li>
+                    <label for="workplace">Workplace</label>
+                    <input type="text" id="workplace" placeholder="Workplace" name="workplace">
+                </li>
+                <li>
+                    <label for="hourlyRate">Hourly Rate</label>
+                    <input type="number" id="hourlyRate" placeholder="Hourly Rate" name="hourlyRate">
+                </li>
+            </ul>
+
+            <ul>
+                <li><a onclick="exportData()" class="exportDataBtn">Export Work Hours</a></li>
+                <li><a onclick="resetData()" class="resetDataBtn">reset Data</a></li>
+            </ul>
         </div>
     </div>
 
