improving the readblity of the data by hiding the buttons while scrolling to the bottom

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </details>
     </main>
 
-    <div class="controls">
+    <div class="controls" id="controls">
         <p id="elapsedTime" class="elapsedTime">Work has not started yet.</p>
         <button class="addHoursBtn" onclick="toggleAddHoursMenu()">+</button>
         <div class="addHoursMenu" id="addHoursMenu">
@@ -56,15 +56,15 @@
             <ul>
                 <li>    
                     <label for="date">Date</label>
-                    <input type="date" id="date" placeholder="date" name="date">
+                    <input type="text" onfocus="(this.type='date')" onblur="(this.type='text')" id="date" placeholder="date" name="date">
                 </li>
                 <li>
                     <label for="startTime">From</label>
-                    <input type="time" id="startTime" placeholder="Start Time">
+                    <input type="text" onfocus="(this.type='time')" onblur="(this.type='text')" id="startTime" placeholder="Start Time">
                 </li>
                 <li>
                     <label for="endTime">Until</label>
-                    <input type="time" id="endTime" placeholder="End Time">
+                    <input type="text" onfocus="(this.type='time')" onblur="(this.type='text')" id="endTime" placeholder="End Time">
                 </li>
             </ul>
         </div>
