--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p id="elapsedTime" class="elapsedTime">Work has not started yet.</p>
         <button class="addHoursBtn" onclick="toggleAddHoursMenu()">+</button>
         <div class="addHoursMenu" id="addHoursMenu">
-            <a onclick="toggleAddHoursMenu()" class="settingsCloseBtn">Close</a>
+            <a onclick="toggleAddHoursMenu()" class="settingsCloseBtn">Cancel</a>
             <a onclick="addHours()" class="settingsSaveBtn">Save</a>
             <h1 class="settingsTitle">New Entry</h1>
             <ul>
