--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
             <ul>
                 <li><a onclick="exportData()" class="exportDataBtn">Export Work Hours</a></li>
-                <li><a onclick="resetData()" class="resetDataBtn">reset Data</a></li>
+                <li><a onclick="resetData()" class="resetDataBtn">Reset Data</a></li>
             </ul>
         </div>
     </div>
