improving the design

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="colors"></div>
         <nav id="stickyNav">
             <p id="navTitle" class="navTitle"></p>
-            <button onclick="loadLinksMenu()" class="linksMenuBtn" id="linksMenuBtn"><img id="linksMenuBtnImg" src="menuBtn.png" alt=""></button>
+            <button onclick="loadLinksMenu()" class="linksMenuBtn" id="linksMenuBtn"><img id="linksMenuBtnImg" src="/img/hamburgerMenuIcon.png" alt=""></button>
             <div class="linksMenu" id="linksMenu">
                 <a href="/hoursTracker">Home</a>
                 <a href="/hoursTracker/formal.html">Table View</a>
@@ -48,7 +48,7 @@
 
     <div class="controls" id="controls">
         <p id="elapsedTime" class="elapsedTime">Work has not started yet.</p>
-        <button class="addHoursBtn" onclick="toggleMenu('addHours')">+</button>
+        <button class="addHoursBtn" onclick="toggleMenu('addHours')"><img src="/img/XIcon.png" alt="+"></button>
         <div class="addHoursMenu" id="addHoursMenu">
             <a onclick="toggleMenu('addHours')" class="settingsCloseBtn">Cancel</a>
             <a onclick="addHoursMenu()" class="settingsSaveBtn">Add</a>
