fixing icons problems

--- a/formal.html
+++ b/formal.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Table View</h1>
 
-    <button onclick="loadLinksMenu()" class="linksMenuBtn"><img id="linksMenuBtnImg" src="/img/hamburgerMenuIcon.png" alt=""></button>
+    <button onclick="loadLinksMenu()" class="linksMenuBtn"><img id="linksMenuBtnImg" src="./img/hamburgerMenuIcon.png" alt=""></button>
     <div class="linksMenu" id="linksMenu">
         <a href="/hoursTracker">Home</a>
         <a href="/hoursTracker/formal.html">Table View</a>
